Add tmux config and tpm

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "powerline/fonts"]
 	path = powerline/fonts
 	url = https://github.com/powerline/fonts
+[submodule "tmux/plugins/tpm"]
+	path = tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
