--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,9 @@
 - clean: ['~']
 
 - link:
+    ~/.bash_aliases: bash_aliases
+    ~/.bash_profile: bash_profile
+    ~/.bashrc: bashrc
     ~/.tmux.conf: tmux.conf
     ~/.tmux/plugins/tpm: tmux/plugins/tpm
     ~/.vim: vim
