Add git configuration, with optional include file

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,8 @@
     ~/.bash_aliases: bash_aliases
     ~/.bash_profile: bash_profile
     ~/.bashrc: bashrc
+    ~/.gitconfig: gitconfig
+    ~/.gitignore: gitignore
     ~/.tmux.conf: tmux.conf
     ~/.tmux/plugins/tpm: tmux/plugins/tpm
     ~/.vim: vim
