--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,7 @@
 
 - link:
     ~/.bash_aliases: bash_aliases
+    ~/.bash_functions: bash_functions
     ~/.bash_profile: bash_profile
     ~/.bashrc: bashrc
     ~/.gitconfig: gitconfig
