--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -36,8 +36,11 @@
       stdout: true
       stderr: true
       description: Installing vim powerline fonts
-
-- shell:
+    -
+      command: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
+      stdout: true
+      stderr: true
+      description: Installing nvm
     -
       command: echo 'Some config files are not installed automatically and can be found in the ./diy ((d)o (i)t (y)ourself) directory' && command ls -m ./diy/
       stdout: true
