--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -28,8 +28,8 @@
     ~/.bash_functions_dotfiles: bash_functions
     ~/.bash_profile_dotfiles: bash_profile
     ~/.bashrc_dotfiles: bashrc
+    ~/.config/git/ignore: config/git/ignore
     ~/.gitconfig_dotfiles: gitconfig
-    ~/.gitignore_dotfiles: gitignore
     ~/.tmux.conf: tmux.conf
     ~/.tmux/plugins/tpm: tmux/plugins/tpm
     ~/.vim: vim
