--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -41,4 +41,4 @@
       command: echo 'Some config files are not installed automatically and can be found in the ./diy ((d)o (i)t (y)ourself) directory' && command ls -m ./diy/
       stdout: true
       stderr: true
-      description: Optional non-automated configuarion notification
+      description: Optional non-automated configuration notification
