--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -6,4 +6,4 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize tmux plugin manager (tpm)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
