--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,9 +1,46 @@
-# Disable the delay after moving to another pane
-set-option -g repeat-time 0
+# Desirable options from tmux-sensible are included in this file manually and are marked with [ts].
+# See https://github.com/tmux-plugins/tmux-sensible for more information.
 
-# Setup tpm plugins
+# Setup tmux plugin manager (tpm).
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# Initialize tmux plugin manager (tpm)
+# Server options.
+set -s default-terminal 'tmux-256color'         # Improve terminal emulation [ts].
+                                                # See https://github.com/tmux/tmux/wiki/FAQ#i-dont-see-italics-or-italics-and-reverse-are-the-wrong-way-round.
+set -s escape-time 50                           # Reduce time for an escape key input to register to fix exiting editing
+                                                # mode in vi [ts].
+                                                # escape-time should be set to a non-zero value as per this answer https://superuser.com/a/1809494.
+set -s focus-events on                          # Enable terminal focus events [ts].
+set -sa terminal-overrides ',xterm*:Tc'         # Enable RBG color escape sequences.
+
+# Global session options.
+set -g base-index 1                             # Start window indexing at 1 for simpler keyboard navigation.
+set -g display-time 2000                        # Increase status line message display time [ts].
+set -g history-limit 65536                      # Increase scrollback buffer size [ts].
+set -g mouse on                                 # Enable mouse support.
+set -g repeat-time 0                            # Disable command repetition as it can introduce input delay.
+set -g status-interval 2                        # Increase status bar refresh rate [ts].
+set -g status-keys vi                           # Use vi style key bindings in the status line.
+                                                # tmux-sensible prefers using emacs here but using vi seems fine [ts].
+
+# Global window options.
+set -wg aggressive-resize on                    # Improve resizing defaults [ts].
+                                                # See https://mutelight.org/practical-tmux.
+set -wg mode-keys vi                            # Use vi style key bindings in copy mode.
+set -wg pane-base-index 1                       # Start pane indexing at 1 for simpler keyboard navigation.
+
+# Keybinds.
+%hidden PREFIX="C-b"
+set -g prefix "$PREFIX"                         # Set prefix to desired prefix.
+
+unbind C-b                                      # Unbind the default prefix "escape" key sequence $PREFIX, C-b.
+bind "$PREFIX" send-prefix                      # Bind the new prefix "escape" key sequence $PREFIX, $PREFIX to the new
+                                                # prefix.
+
+bind c new-window -c '#{pane_current_path}'             # Open new windows in the current pane directory.
+bind \" split-window -v -c '#{pane_current_path}'       # Open new panes in the current pane directory.
+bind % split-window -h -c '#{pane_current_path}'        # Open new panes in the current pane directory.
+
+# Start tmux plugin manager (tpm).
 run '~/.config/tmux/plugins/tpm/tpm'
